# mealie-organizer

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.MD  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  TASKS.md  UPDATE.md  VERSION  compose.ghcr.yml  cookdex.code-workspace  docker-compose.build.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-ghcr.yml
branding/: colors.md
configs/: config.json  default_sites.json
configs/taxonomy/: categories.json  cookbooks.json  labels.json  tag_rules.json  tags.json  tools.json  units_aliases.json
docs/: DATA_MAINTENANCE.md  DIRECT_DB.md  GETTING_STARTED.md  INSTALL.md  LOCAL_DEV.md  PARSER_MIGRATION.md  PLUGIN_POC.md  README.md  REPO_HYGIENE.md  TASKS.md  UPDATE.md  docker-ghcr.md
scripts/: bump_version.py  release.sh  setup-db-tunnel.sh
scripts/dev/: clean_repo.ps1
scripts/docker/: entrypoint.sh  update.sh
scripts/install/: README.md  bootstrap_mealie_plugin.sh  bootstrap_webui.sh  generate_plugin_bundle.py  ubuntu_setup_cookdex.sh  ubuntu_setup_mealie.sh  windows_setup_mealie.ps1
scripts/python/mealie/: README.md  audit_taxonomy.py  categorizer_core.py  cleanup_tags.py  import_categories.py  recipe_categorizer_chatgpt.py  recipe_categorizer_ollama.py  reset_mealie_taxonomy.py  tags.json  taxonomy_manager.py
scripts/qa/: run_local_webui_qa.py  run_task_dryrun_pipeline.py
src/cookdex/: __init__.py  api_client.py  audit_taxonomy.py  categorizer_core.py  config.py  cookbook_filters.py  cookbook_manager.py  data_maintenance.py  db_client.py  foods_manager.py  ingredient_parser.py  labels_manager.py  mealie_backup.py  plugin_server.py  recipe_categorizer.py  recipe_categorizer_anthropic.py  recipe_deduplicator.py  recipe_junk_filter.py  recipe_name_normalizer.py  recipe_quality_audit.py  recipe_reimporter.py  rule_tagger.py  slug_repair.py  tag_pipeline.py  tag_rules_generation.py  tag_rules_qa.py  taxonomy_manager.py  taxonomy_store.py  tools_manager.py  units_manager.py  url_security.py  yield_normalizer.py
src/cookdex/recipe_dredger/: __main__.py  crawler.py  importer.py  language.py  models.py  patterns.py  rate_limiter.py  sites.py  storage.py  url_utils.py  verifier.py
src/cookdex/webui_server/: app.py  config_files.py  deps.py  env_catalog.py  main.py  rate_limit.py  runner.py  scheduler.py  schemas.py  security.py  settings.py  state.py  tasks.py  taxonomy_workspace.py
src/mealie_organizer/: __init__.py  api_client.py  audit_taxonomy.py  categorizer_core.py  config.py  cookbook_manager.py  data_maintenance.py  foods_manager.py  ingredient_parser.py  labels_manager.py  plugin_runtime.py  plugin_server.py  recipe_categorizer.py  taxonomy_manager.py  tools_manager.py  units_manager.py
src/mealie_organizer/webui_server/: app.py  env_catalog.py  (+7 more)
tests/: test_api_client.py  test_categorizer_core.py  test_config.py  test_cookbook_filters.py  test_cookbook_manager.py  test_data_maintenance.py  test_documentation_accuracy.py  test_dredger.py  test_favicon_assets.py  test_foods_manager.py  test_ingredient_parser.py  test_labels_tools_manager.py  test_plugin_bundle_generator.py  test_plugin_runtime.py  test_plugin_server.py  test_recipe_categorizer.py  test_recipe_name_normalizer.py  test_recipe_reimporter.py  test_rule_tagger.py  test_tag_pipeline.py  test_tag_rules_generation.py  test_tag_rules_qa.py  test_task_pipeline_dry_run.py  test_taxonomy_manager.py  test_taxonomy_workspace.py  test_units_manager.py  test_url_canonicalization.py  test_webui_app.py  test_webui_config_files.py  test_webui_overview_page.py  test_webui_rate_limit.py  test_webui_runner.py  test_webui_scheduler.py  test_webui_settings.py  test_webui_settings_api_detect.py  test_webui_state.py  test_webui_tasks.py  test_yield_normalizer.py
web/: index.html  package-lock.json  package.json
web/design/: layout.pen
web/scripts/: verify_markdown_dates.mjs  webui_smoke_playwright.mjs
web/src/: App.jsx  constants.js  styles.css  utils.jsx
(+22 files in other folders)
