[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealie-organizer"
dynamic = ["version"]
description = "Automation tools for Mealie taxonomy and categorization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
mealie-categorizer = "mealie_organizer.recipe_categorizer:main"
mealie-taxonomy = "mealie_organizer.taxonomy_manager:main"
mealie-taxonomy-audit = "mealie_organizer.audit_taxonomy:main"
mealie-cookbooks = "mealie_organizer.cookbook_manager:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
