[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealie-organizer"
dynamic = ["version"]
description = "Automation tools for Mealie taxonomy and categorization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "apscheduler>=3.10.4",
  "cryptography>=42.0.0",
  "fastapi>=0.115.0",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.30",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
mealie-categorizer = "mealie_organizer.recipe_categorizer:main"
mealie-taxonomy = "mealie_organizer.taxonomy_manager:main"
mealie-taxonomy-audit = "mealie_organizer.audit_taxonomy:main"
mealie-cookbooks = "mealie_organizer.cookbook_manager:main"
mealie-data-maintenance = "mealie_organizer.data_maintenance:main"
mealie-ingredient-parser = "mealie_organizer.ingredient_parser:main"
mealie-foods = "mealie_organizer.foods_manager:main"
mealie-units = "mealie_organizer.units_manager:main"
mealie-labels = "mealie_organizer.labels_manager:main"
mealie-tools = "mealie_organizer.tools_manager:main"
mealie-webui-server = "mealie_organizer.webui_server.main:main"
mealie-plugin-server = "mealie_organizer.plugin_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
