[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookdex"
dynamic = ["version"]
description = "Automation tools for Mealie taxonomy and categorization"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = [
  "apscheduler>=3.10.4",
  "cryptography>=42.0.0",
  "eval_type_backport>=0.2.0; python_version < '3.10'",
  "fastapi>=0.115.0",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.30",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
db = [
  "psycopg2-binary>=2.9",
  "sshtunnel>=0.4",
  "paramiko>=2.11,<4",
]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[project.scripts]
cookdex-categorizer = "cookdex.recipe_categorizer:main"
cookdex-taxonomy = "cookdex.taxonomy_manager:main"
cookdex-taxonomy-audit = "cookdex.audit_taxonomy:main"
cookdex-cookbooks = "cookdex.cookbook_manager:main"
cookdex-data-maintenance = "cookdex.data_maintenance:main"
cookdex-ingredient-parser = "cookdex.ingredient_parser:main"
cookdex-foods = "cookdex.foods_manager:main"
cookdex-units = "cookdex.units_manager:main"
cookdex-labels = "cookdex.labels_manager:main"
cookdex-tools = "cookdex.tools_manager:main"
cookdex-rule-tagger = "cookdex.rule_tagger:main"
cookdex-webui-server = "cookdex.webui_server.main:main"
cookdex-plugin-server = "cookdex.plugin_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
